--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-active"><a href="#.">Home</a></li>
-                                    <li><a href="portfolio">Projects</a></li>
-                                    <li><a href="service">Service</a></li>
-                                    <li><a href="contact">Contact</a></li>
+                                    <li><a href="#">Projects</a></li>
+                                    <li><a href="#">Service</a></li>
+                                    <li><a href="#">Contact</a></li>
                                 </ul>
                             </nav>
 
@@ -103,22 +103,22 @@
                                         <div class="col-lg-4 mil-mb-60">
                                             <h6 class="mil-muted mil-mb-30">Projects</h6>
                                             <ul class="mil-menu-list">
-                                                <li><a target="_blank" href="projects/bcclibrary" class="mil-light-soft">BCC E-Library</a></li>
-                                                <li><a target="_blank" href="projects/crm" class="mil-light-soft">CRM</a></li>
-                                                <li><a target="_blank" href="projects/eforms" class="mil-light-soft">E-forms</a></li>
-                                                <li><a target="_blank" href="projects/hitz" class="mil-light-soft">Hitz</a></li>
-                                                <li><a target="_blank" href="projects/interlinkiq" class="mil-light-soft">InterlinkIQ</a></li>
-                                                <li><a target="_blank" href="projects/itblaster" class="mil-light-soft">ITBlaster.net</a></li>
-                                                <li><a target="_blank" href="projects/scrapsmart" class="mil-light-soft">ScrapSmart</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">BCC E-Library</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">CRM</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">E-forms</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">Hitz</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">InterlinkIQ</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">ITBlaster.net</a></li>
+                                                <li><a target="_blank" href="#" class="mil-light-soft">ScrapSmart</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
                                             <h6 class="mil-muted mil-mb-30">Useful links</h6>
                                             <ul class="mil-menu-list">
                                                 <li><a href="/index" class="mil-light-soft">Home</a></li>
-                                                <li><a href="portfolio" class="mil-light-soft">Projects</a></li>
-                                                <li><a href="service" class="mil-light-soft">Service</a></li>
-                                                <li><a href="contact" class="mil-light-soft">Contact</a></li>
+                                                <li><a href="#" class="mil-light-soft">Projects</a></li>
+                                                <li><a href="#" class="mil-light-soft">Service</a></li>
+                                                <li><a href="#" class="mil-light-soft">Contact</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -198,7 +198,7 @@
 
                                                 <span class="mil-suptitle mil-suptitle-dark mil-mb-60">Crafting Scalable Web Solutions: <br> Merging Efficiency with Innovation.</span>
 
-                                                <a href="services" class="mil-link mil-dark mil-arrow-place">
+                                                <a href="#" class="mil-link mil-dark mil-arrow-place">
                                                     <span>More about me</span>
                                                 </a>
 
@@ -225,7 +225,7 @@
                                             <li><a target="_blank" href="https://gitlab.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-gitlab-square"></i></a></li>
                                         </ul>
                                     </div>
-                                    <a href="portfolio" class="mil-button mil-arrow-place">
+                                    <a href="#" class="mil-button mil-arrow-place">
                                         <span>View pOrtfolio</span>
                                     </a>
                                 </div>
