--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="mil-right">
                                     <div class="mil-social-frame">
                                         <ul class="mil-social-icons mil-dark">
-                                            <li><a target="_blank" href="https://github.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
+                                            <li><a target="_blank" href="https://github.com/mbaylon7" target="_blank" class="social-icon"><i class="fab fa-github"></i></a></li>
                                             <li><a target="_blank" href="https://www.linkedin.com/in/marvin-villasencio-1796562a8/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
                                             <li><a target="_blank" href="https://www.facebook.com/100041542215691/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a></li>
                                             <li><a target="_blank" href="https://gitlab.com/Enzyme101" target="_blank" class="social-icon"><i class="fab fa-gitlab-square"></i></a></li>
